--- a/travis.yml
+++ b/travis.yml
@@ -5,5 +5,5 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-install: pip install tox-travis
-script: tox
+install: "pip install -r requirements.txt"
+script: pytest
