--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 sudo: false
 language: python
 python:
-  - "2.5"
+  - "pypy"
+  - "pypy3" # Pypy3 2.4.0
+  - "pypy-5.3.1"
   - "2.6"
   - "2.7"
   - "3.4"
